--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
+  <div id="rotate-notice">
+    <div class="rotate-icon">🔄</div>
+    <div class="rotate-text">Bitte drehe dein Handy</div>
+    <div class="rotate-sub">für die beste Experience</div>
+  </div>
+
   <div id="wrap">
     <canvas id="ui" width="252" height="140"></canvas>
-    <div id="hint" style="text-align: center; font-family: sans-serif; font-size: 11px; line-height: 1.4; color: #aaa; margin-top: 10px; max-width: 500px; margin-left: auto; margin-right: auto;">
+    <div id="hint">
       <strong>NOT AN OFFICIAL MINECRAFT PRODUCT. NOT APPROVED BY OR ASSOCIATED WITH MOJANG OR MICROSOFT.</strong>
       <br>
-      Assets via <a href="https://github.com/PrismarineJS/minecraft-assets" target="_blank" style="color: #888;">PrismarineJS</a> &amp; 
-      <a href="https://minecraft.wiki/" target="_blank" style="color: #888;">Minecraft Wiki</a> (<a href="https://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank" style="color: #888;">CC BY-NC-SA 3.0</a>). 
+      Assets via <a href="https://github.com/PrismarineJS/minecraft-assets" target="_blank">PrismarineJS</a> &amp; 
+      <a href="https://minecraft.wiki/" target="_blank">Minecraft Wiki</a> (<a href="https://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">CC BY-NC-SA 3.0</a>). 
       Minecraft-Inhalte &copy; Mojang AB.
     </div>
   </div>
-</body>
+  
   <script src="./app.js"></script>
 </body>
 </html>
